--- a/BlazorApp1/wwwroot/index.html
+++ b/BlazorApp1/wwwroot/index.html
@@ -11,15 +11,7 @@
 </head>
 
 <body>
-    <app>Loading...</app>
-
-    <!--<div id="blazor-error-ui">
-        An unhandled error has occurred.
-        <a href="" class="reload">Reload</a>
-        <a class="dismiss">🗙</a>
-    </div>-->
+    <app></app>
     <script src="_framework/blazor.webassembly.js"></script>
-    <script src="js/site.js" asp-append-version="true"></script>
 </body>
-
 </html>
